--- a/mine/mine.html
+++ b/mine/mine.html
@@ -59,20 +59,25 @@
 </head>
 <body style="padding:10px">
 <div style="width:100%;height:100%;display: flex;flex-direction: column;justify-content: center;align-items: center">
-
-    <div style="width:96px;height:96px;border: 1px solid #d0d0d0;border-radius: 48px;overflow: hidden;text-align: center;line-height: 96px" id="name"></div>
-
-    <div style="flex-direction: row;justify-content: center;align-items: center;height:40px;line-height: 40px;margin-top: 20px">
-        <span>版本号：</span><span id="version"></span>,&nbsp;
-        <span>内核版本号：</span><span id="versionCore"></span>
+    <div style="position: absolute;right:90px;top:80px;"><img style="width:70px;height:70px;border-radius:100px;" id="pic"
+   src="../images/traceless.png" />
     </div>
-
-    <div style="flex-direction: row;justify-content: center;align-items: center;height:60px;line-height: 40px;margin-top: 20px">
-        <span>标识：</span><span id="id"></span>
-        <br>
-        <span>设备标识：</span><span id="deviceId"></span>
+    <div style="position: absolute;left:90px;top:100px;font-family: 'Times New Roman'; font-size: 20px;font-weight:bold;width: 230px;height: 70px" id="name"></div>
+    <div style="position: absolute;left:90px;top:180px;right:90px;">
+        <hr style="height:1px;border:none;border-top:1px solid #d0d0d0;"/>
     </div>
-    <Button style="width:300px;height:40px;border-radius: 5px;text-align: center;border: 1px solid #d0d0d0;line-height: 40px;margin-top: 20px;cursor: pointer;background-color: #f0f0f0" onclick="_clear()">
+    <!--<div style="width:96px;height:96px;border: 1px solid #d0d0d0;border-radius: 48px;overflow: hidden;text-align: center;line-height: 96px" id="name"></div>-->
+        <div style="position: absolute;left:90px;top:200px;width: 430px;height: 40px;">
+            <span style="color: #a0a0a0;font-weight: bold">版&nbsp;&nbsp;&nbsp;&nbsp;本&nbsp;&nbsp;&nbsp;&nbsp;号: </span>
+            <span id="version" style="padding-left: 10px"></span><br><br>
+            <span style="color: #a0a0a0;font-weight: bold">内核版本号: </span>
+            <span id="versionCore" style="padding-left: 10px"></span><br><br>
+            <span style="color: #a0a0a0;font-weight: bold">内核版本号: </span>
+            <span id="id" style="padding-left: 10px"></span><br><br>
+            <span style="color: #a0a0a0;font-weight: bold">内核版本号: </span>
+            <span id="deviceId" style="padding-left: 10px"></span><br><br>
+        </div>
+    <Button style="width:300px;height:40px;border-radius: 5px;text-align: center;border: 1px solid #d0d0d0;line-height: 40px;margin-top: 260px;cursor: pointer;background-color: #f0f0f0" onclick="_clear()">
         清除聊天缓存
     </Button>
     <Button style="width:300px;height:40px;border-radius: 5px;text-align: center;border: 1px solid #d0d0d0;line-height: 40px;margin-top: 20px;cursor: pointer;background-color: #f0f0f0" onclick="_reset()">
@@ -84,19 +89,20 @@
     <!--<Button style="width:300px;height:40px;border-radius: 5px;text-align: center;border: 1px solid #d0d0d0;line-height: 40px;margin-top: 20px;cursor: pointer;background-color: #f0f0f0" onclick="test()">-->
       <!--test-->
     <!--</Button>-->
-
 </div>
 </body>
 <script>
     let user = window.top.engine.getApplication().getCurrentApp().getCurrentUser();
+    console.log(user)
     if(user){
         document.getElementById("id").innerText = user.id;
         document.getElementById("deviceId").innerText = user.deviceId;
-        if(user.pic){
-            document.getElementById("name").innerHTML = "<img src='"+user.pic+"' style='width:96px;height:96px;'>";
-        }else{
-            document.getElementById("name").innerText = user.name;
-        }
+        // if(user.pic){
+        //     document.getElementById("name").innerHTML = "<img src='"+user.pic+"' style='width:96px;height:96px;'>";
+        // }else{
+        //     document.getElementById("name").innerText = user.name;
+        // }
+        document.getElementById("name").innerText = user.name;
 
     }
 
