--- a/mine/mine.html
+++ b/mine/mine.html
@@ -72,9 +72,9 @@
             <span id="version" style="padding-left: 10px"></span><br><br>
             <span style="color: #a0a0a0;font-weight: bold">内核版本号: </span>
             <span id="versionCore" style="padding-left: 10px"></span><br><br>
-            <span style="color: #a0a0a0;font-weight: bold">内核版本号: </span>
+            <span style="color: #a0a0a0;font-weight: bold">标&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;识: </span>
             <span id="id" style="padding-left: 10px"></span><br><br>
-            <span style="color: #a0a0a0;font-weight: bold">内核版本号: </span>
+            <span style="color: #a0a0a0;font-weight: bold">设&nbsp;备&nbsp;标&nbsp;&nbsp;识: </span>
             <span id="deviceId" style="padding-left: 10px"></span><br><br>
         </div>
     <Button style="width:300px;height:40px;border-radius: 5px;text-align: center;border: 1px solid #d0d0d0;line-height: 40px;margin-top: 260px;cursor: pointer;background-color: #f0f0f0" onclick="_clear()">
