--- a/recent/recent.html
+++ b/recent/recent.html
@@ -137,7 +137,8 @@
         var all = await ChatManager.asyGetAll(user.id)
         console.log(all)
         // console.log({all})
-        let html = "";
+        let html = `<div  style="width: 100%; height: 40px; cursor: pointer; padding-left: 40px; display: flex; flex-direction: row; justify-content: flex-start; align-items: center;background-color: rgb(246,216,178) "><img src="../images/Wifi-Error 1 (5).png" height="25" width="25"/>&nbsp;&nbsp;<span style="color: #966D3F;font-weight: bold;"> 网络连接已断开</span></div>`
+
         let i = 0;
         if (all) {
             if (all.length) {
