--- a/recent/recent.html
+++ b/recent/recent.html
@@ -72,6 +72,10 @@
     <div style="height:100%;width:200px;display: flex;flex-direction: column;align-items: center;overflow: hidden">
         <div class="title" style="">消息
         </div>
+        <div style=" width: 200px; height: 50px; cursor: pointer; padding-left: 40px; display: flex; flex-direction: row; justify-content: flex-start; align-items: center;background-color: rgb(246,216,178) ">
+            <img height="25" src="../images/Wifi-Error 1 (5).png" width="25"/>&nbsp;&nbsp;<span
+                style="color: #966D3F;font-weight: bold;"> 网络连接已断开</span>
+        </div>
         <div id="recent" style="width:200px;flex:1;overflow: auto;border-right: 1px solid #d0d0d0;">
         </div>
     </div>
@@ -116,10 +120,9 @@
     }
 
 
-
     function chat(chatId, isGroupChat) {
         select(chatId)
-        if (selectID !==chatId ) {
+        if (selectID !== chatId) {
             showChatBox(isGroupChat, chatId);
         }
         selectID = chatId
@@ -137,7 +140,7 @@
         var all = await ChatManager.asyGetAll(user.id)
         console.log(all)
         // console.log({all})
-        let html = `<div  style="width: 100%; height: 40px; cursor: pointer; padding-left: 40px; display: flex; flex-direction: row; justify-content: flex-start; align-items: center;background-color: rgb(246,216,178) "><img src="../images/Wifi-Error 1 (5).png" height="25" width="25"/>&nbsp;&nbsp;<span style="color: #966D3F;font-weight: bold;"> 网络连接已断开</span></div>`
+        let html = ``
 
         let i = 0;
         if (all) {
