--- a/recent/recent.html
+++ b/recent/recent.html
@@ -99,7 +99,7 @@
     var selectID = ''
 
     function hover(chatId, i) {
-        document.getElementById(i).style.display = 'block'
+        // document.getElementById(i).style.display = 'block'
         if (selected != chatId) {
             event.target.style.backgroundColor = "#e0e0e0";
 
