--- a/recent/recent.html
+++ b/recent/recent.html
@@ -100,7 +100,10 @@
     let selected = "";
     let firstChatId
     var selectID = ''
-
+    async function DeleteChat (chatId) {
+        await ChatManager.asyDeleteChat(user.id,chatId)
+        location.reload()
+    }
     function hover(chatId, i) {
         document.getElementById(i).style.visibility = "visible"
 
@@ -139,6 +142,7 @@
         selectID = chatId
 
 
+
     }
 
     function showChatBox(isGroupChat, id) {
@@ -169,32 +173,32 @@
                     html += `<div id="${chatId}" `
                     html += `style="width:100%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center" onmouseover="hover('${chatId}',${i})" `
                     html += `onmouseout="leave('${chatId}',${i})" onclick="chat('${chatId}', ${isGroup})">  `
-                    html += `<div id='${i}'  style="width:10%;text-align: center; visibility: hidden; font-weight: bold;font-family: "Abadi MT Condensed Light"" >×&nbsp;</div>`
+                    html += `<div id='${i}' onclick="DeleteChat('${chatId}')"  style="width:10%;text-align: center; visibility: hidden; font-weight: bold;font-family: "Abadi MT Condensed Light"" >×&nbsp;</div>`
                     html += isGroup ?
-                        `<div style="width:40px;height: 40px;border: solid 0.5px #e0e0e0; border-radius:120px; overflow:hidden">
+                        `<div style="width:40px;height: 40px;border: solid 2px rgb(218,223,225);background-color: rgb(255,255,255); border-radius:4px; overflow:hidden">
                             <ul style="margin:0;padding:0;">
-                                <li style="margin-left:3px;padding:0;list-style-type:none;float:left;width:14px;">
-                                    <img src="../images/1024x1024.png"  style="width:15px;height:15px;border-radius:100px;"/>
+                                <li style="margin:0;padding:0;list-style-type:none;float:left;width:18px;height: 18px;">
+                                     <img src="../images/2.jpeg"  style="width:17px;height:17px; border-radius:2px;background-color: rgb(255,255,255)"/>
                                 </li>
-                                <li style="margin-left:3px;padding:0;list-style-type:none;float:left;width:14px;">
-                                    <img src="../images/Wifi-Error 1 (4).png"  style="width:15px;height:15px;border-radius:100px;"/>
+                                <li style="margin:0;padding:0;list-style-type:none;float:left;width:18px;height: 18px">
+                                     <img src="../images/per.jpeg"  style="width:17px;height:17px; border-radius:2px;background-color: rgb(255,255,255)"/>
                                 </li>
-                                <li style="margin-left:3px;padding:0;list-style-type:none;float:left;width:14px;">
-                                    <img src="../images/Wifi-Error 1 (2).png"  style="width:15px;height:15px;border-radius:100px;"/>
+                                <li style="margin:0;padding:0;list-style-type:none;float:left;width:18px;height: 18px">
+                                     <img src="../images/imooc.jpg"  style="width:17px;height:17px; border-radius:2px;background-color: rgb(255,255,255)"/>
                                 </li>
-                                <li style="margin-left:3px;padding:0;list-style-type:none;float:left;width:14px;">
-                                    <img src="../images/Wifi-Error.png"  style="width:15px;height:15px;border-radius:100px;"/>
+                                <li style="margin:0;padding:0;list-style-type:none;float:left;width:18px;height: 18px">
+                                    <img src="../images/product_hunt.png"  style="width:17px;height:17px; border-radius:2px;background-color: rgb(255,255,255)"/>
                                 </li>
                             </ul>
-                        </div>&nbsp;&nbsp;` + re.name : person.pic ? `<img src="${person.pic}"  style="width:40px;height:40px;border-radius:100px;"/>&nbsp;&nbsp;` + person.name
-                            : `<img src="../images/traceless.png"  style="width:40px;height:40px;border-radius:100px;"/>&nbsp;&nbsp;` + person.name
+                        </div>&nbsp;&nbsp;` + re.name : person.pic ? `<img src="${person.pic}"  style="width:40px;height:40px;border-radius:4px;"/>&nbsp;&nbsp;` + person.name
+                            : `<img src="../images/user2.png"  style="width:40px;height:40px; border-radius:4px;background-color: rgb(255,255,255)"/>&nbsp;&nbsp;` + person.name
                     const newMsgNum = await ChatManager.asyGetNewMsgNum(chatId)
                     // console.log({newMsgNum})
                     if (newMsgNum) {
                         // console.log('here')
                         html += `<div style='color:white;font-size: 9pt;border:1px solid red;min-width:15px;height:15px;text-align: center;line-height: 15px;border-radius: 15px;background-color: red;margin-left: 5px;margin-bottom: 15px'>${newMsgNum}</div>`;
                     }
-                    html += `<span id='${i}' style='position: absolute;left: 180px;display: none;font-weight: bold;font-family: "Abadi MT Condensed Light"'>×<span></div>`;
+                    html += `</div>`;
                 }
 
             }
