--- a/contact/contact.html
+++ b/contact/contact.html
@@ -88,13 +88,15 @@
 
     function hover(name) {
         if (selected != name)
-            event.target.style.backgroundColor = "#e0e0e0";
+           // event.target.style.backgroundColor = "#e0e0e0";
+            document.getElementById(name).backgroundColor = "#e0e0e0"
 
     }
 
     function leave(name) {
         if (selected != name)
-            event.target.style.backgroundColor = "#f0f0f0";
+            //event.target.style.backgroundColor = "#f0f0f0";
+        document.getElementById(name).backgroundColor = "#f0f0f0"
 
     }
 
@@ -124,21 +126,23 @@
             for (var i = 0; i < all.length; i++) {
                 var f = all[i];
                 if (f.id !== user.id) {
-                    html += "<div id='";
-                    html += f.id;
-                    html += "' style=\"width:100%;height:50px;line-height: 50px;cursor: pointer;padding-left: 10px\" onmouseover=\"hover('";
-                    html += f.id;
-                    html += "')\" onmouseout=\"leave('";
-                    html += f.id;
-                    html += "')\" onclick=\"select('";
-                    html += f.id;
-                    html += "','";
-                    html += f.name;
-                    html += "','";
-                    html += f.pic;
-                    html += "')\">";
-                    html += f.name;
-                    html += "</div>";
+                    html += `<div id='${f.id}' style = "width:100%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" onmouseover="hover('${f.id}')" onmouseout ="leave('${f.id}')" onclick = "select('${f.id}','${f.name}','${f.pic}')">`
+                    html+= f.pic?`<img src="${f.pic}"  style="width:40px;height:40px;border-radius:50px;"/>&nbsp;&nbsp;<span style="font-weight: bold;margin-top: 0px">${f.name}</span>`:`<img src="../images/1024x1024.png"  style="width:40px;height:40px;border-radius:50px;"/>&nbsp;&nbsp;<span  style="font-weight: bold;margin-top: 0px">${f.name}</span>`
+                    html+= `</div>`
+                    // html += f.id;
+                    // html += "' style=\"width:100%;height:50px;line-height: 50px;cursor: pointer;padding-left: 10px\" onmouseover=\"hover('";
+                    // html += f.id;
+                    // html += "')\" onmouseout=\"leave('";
+                    // html += f.id;
+                    // html += "')\" onclick=\"select('";
+                    // html += f.id;
+                    // html += "','";
+                    // html += f.name;
+                    // html += "','";
+                    // html += f.pic;
+                    // html += "')\">";
+                    // html += f.name;
+                    // html += "</div>";
                 }
             }
             document.getElementById("contact").innerHTML = html;
