--- a/recent/recent.html
+++ b/recent/recent.html
@@ -72,7 +72,8 @@
     <div style="height:100%;width:200px;display: flex;flex-direction: column;align-items: center;overflow: hidden">
         <div class="title" style="">消息
         </div>
-        <div id="offlineWarning" style=" width: 200px; height: 35px; cursor: pointer; padding-left: 30px; display: none; flex-direction: row; justify-content: flex-start; align-items: center;background-color: rgb(246,216,178) ">
+        <div id="offlineWarning"
+             style=" width: 200px; height: 35px; cursor: pointer; padding-left: 30px; display: none; flex-direction: row; justify-content: flex-start; align-items: center;background-color: rgb(246,216,178) ">
             <img height="20" src="../images/Wifi-Error.png" width="20"/>&nbsp;&nbsp;<span
                 style="color: #966D3F;font-weight: bold;"> 网络连接已断开</span>
         </div>
@@ -97,12 +98,32 @@
     let selected = "";
     let firstChatId
     var selectID = ''
-    async function DeleteChat (chatId) {
-        await ChatManager.asyDeleteChat(user.id,chatId)
-        location.reload()
+
+    async function DeleteChat(chatId, isGroup) {
+        if (isGroup!== '1') {
+            await ChatManager.asyDeleteChat(user.id, chatId)
+            location.reload()
+        }
     }
-    function hover(chatId, i) {
-        document.getElementById(i).style.visibility = "visible"
+
+    async function MsgsOne(chatId) {
+
+        var MsgsOneData = await ChatManager.asyGetMsgsOne(user.id, chatId)
+        return await MsgsOneData[0].content
+
+    }
+    function hovers(chatId, i) {
+        document.getElementById(i).style.color = 'rgb(56,190,243)'
+    }
+    function leaves(chatId, i) {
+        document.getElementById(i).style.color = 'rgb(188,188,188)'
+    }
+    function hover(chatId, i,isGroup) {
+        if (isGroup!== 1){
+            document.getElementById(i).style.visibility = "visible"
+        }
+
+
 
         if (selected != chatId) {
             //event.target.style.backgroundColor = "#e0e0e0";
@@ -111,9 +132,11 @@
         }
     }
 
-    function leave(chatId, i) {
+    function leave(chatId, i,isGroup) {
+        if (isGroup !== '1') {
+            document.getElementById(i).style.visibility = "hidden"
+        }
 
-        document.getElementById(i).style.visibility = "hidden"
         if (selected != chatId) {
             //event.target.style.backgroundColor = "#f0f0f0";
             document.getElementById(i).style.backgroundColor = "#f0f0f0";
@@ -151,6 +174,7 @@
         var all = await ChatManager.asyGetAll(user.id)
         let html = ``
 
+
         let i = 0;
         if (all) {
             if (all.length) {
@@ -162,41 +186,89 @@
                 const {id: chatId, isGroup} = re
                 const person = await ContactManager.asyGet(user.id, re.id)
                 console.log(person)
-
+                var MsgsOneData = await ChatManager.asyGetMsgsOne(user.id, chatId)
+                var data = ''
+                try {
+                    if (MsgsOneData.length!==0) {
+                        if (typeof JSON.parse(MsgsOneData[0].content) === "object") {
+                            data = '[图片]'
+                        } else {
+                            data = MsgsOneData[0].content
+                        }
+                    }else {
+                        data = ''
+                    }
+                } catch (err) {
+                     data = MsgsOneData[0].content
+                }
                 //存在清空消息记录后contact表没同步过来,但是消息已收到的情况
                 if (isGroup || person) {
+                    // let imghtml = ``
+                    // if (isGroup) {
+                    //     var Imgdata = await ContactManager.asyGetgroupMemberImg(chatId)
+                    //     for (var j = 0; j < Imgdata.length; j++) {
+                    //         if (Imgdata.length === 3) {
+                    //             imghtml += Imgdata[j].pic === null ? Imgdata[j] === Imgdata[0] ?
+                    //                 `<div style="margin-left:10px;padding:0;float:left;width:20px;height: 20px;">
+                    //                          <img src="../images/1024x1024.png" style="width:20px;height:20px;">
+                    //                          </div>` :
+                    //                 `<div style="margin:0px;padding:0;float:left;width:20px;height: 20px;">
+                    //                          <img src="../images/1024x1024.png" style="width:20px;height:20px;">
+                    //                          </div>` : Imgdata[j] === Imgdata[0] ?
+                    //                 `<div style="margin-left:10px;padding:0;float:left;width:20px;height: 20px;">
+                    //                          <img src="${Imgdata[j].pic}" style="width:20px;height:20px;">
+                    //                          </div>` :
+                    //                 `<div style="margin:0px;padding:0;float:left;width:20px;height: 20px;">
+                    //                          <img src="${Imgdata[j].pic}" style="width:20px;height:20px;">
+                    //                          </div>`
+                    //         } else if (Imgdata.length === 2) {
+                    //             imghtml += Imgdata[j].pic === null ?
+                    //                 `<div style="margin-top:10px;padding:0;float:left;width:20px;height: 20px;">
+                    //                          <img src="../images/1024x1024.png" style="width:20px;height:20px;">
+                    //                          </div>` :
+                    //                 `<div style="margin-top:10px;padding:0;float:left;width:20px;height: 20px;">
+                    //                          <img src="${Imgdata[j].pic}" style="width:20px;height:20px;">
+                    //                          </div>`
+                    //         } else {
+                    //             imghtml += Imgdata[j].pic === null ?
+                    //                 `<div style="margin:0;padding:0;float:left;width:20px;height: 20px;">
+                    //                          <img src="../images/1024x1024.png" style="width:20px;height:20px;">
+                    //                          </div>` :
+                    //                 `<div style="margin:0;padding:0;float:left;width:20px;height: 20px;">
+                    //                          <img src="${Imgdata[j].pic}" style="width:20px;height:20px;">
+                    //                          </div>`
+                    //         }
+                    //
+                    //     }
+                    // }
 
                     html += `<div id="${chatId}" `
-                    html += `style="width:100%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center" onmouseover="hover('${chatId}',${i})" `
-                    html += `onmouseout="leave('${chatId}',${i})" onclick="chat('${chatId}', ${isGroup})">  `
-                    html += `<div id='${i}' onclick="DeleteChat('${chatId}')"  style="width:10%;text-align: center; visibility: hidden; font-weight: bold;font-family: "Abadi MT Condensed Light"" >×&nbsp;</div>`
-                    html += isGroup ?
-                        `<div style="width:40px;height: 40px;border: solid 2px rgb(218,223,225);background-color: rgb(255,255,255); border-radius:4px; overflow:hidden">
-                            <ul style="margin:0;padding:0;">
-                                <li style="margin:0;padding:0;list-style-type:none;float:left;width:18px;height: 18px;">
-                                     <img src="../images/2.jpeg"  style="width:17px;height:17px; border-radius:2px;background-color: rgb(255,255,255)"/>
-                                </li>
-                                <li style="margin:0;padding:0;list-style-type:none;float:left;width:18px;height: 18px">
-                                     <img src="../images/per.jpeg"  style="width:17px;height:17px; border-radius:2px;background-color: rgb(255,255,255)"/>
-                                </li>
-                                <li style="margin:0;padding:0;list-style-type:none;float:left;width:18px;height: 18px">
-                                     <img src="../images/imooc.jpg"  style="width:17px;height:17px; border-radius:2px;background-color: rgb(255,255,255)"/>
-                                </li>
-                                <li style="margin:0;padding:0;list-style-type:none;float:left;width:18px;height: 18px">
-                                    <img src="../images/product_hunt.png"  style="width:17px;height:17px; border-radius:2px;background-color: rgb(255,255,255)"/>
-                                </li>
-                            </ul>
-                        </div>&nbsp;&nbsp;` + re.name : person.pic ? `<img src="${person.pic}"  style="width:40px;height:40px;border-radius:4px;"/>&nbsp;&nbsp;` + person.name
-                            : `<img src="../images/user2.png"  style="width:40px;height:40px; border-radius:4px;background-color: rgb(255,255,255)"/>&nbsp;&nbsp;` + person.name
+                    html += `style="width:100%;height:50px;cursor: pointer;padding-left: 5px;display:flex;flex-direction:row;justify-content: flex-start;align-items: center;" onmouseover="hover('${chatId}',${i},${isGroup})" `
+                    html += `onmouseout="leave('${chatId}',${i},${isGroup})" onclick="chat('${chatId}', ${isGroup})">  `
+                    html += `<div id='${i}'onmouseover="hovers('${chatId}',${i})" onmouseout="leaves('${chatId}',${i})" onclick="DeleteChat('${chatId}','${isGroup}')"  style="color:rgb(188,188,188);width:10%;text-align: center; visibility: hidden; font-weight: bold;font-family: "Abadi MT Condensed Light"" >×&nbsp;</div>`
+                    //<div style="width:40px;height: 40px;border: solid 0px rgb(218,223,225);background-color: rgb(231,241,247);border-radius:50px; overflow:hidden"> </div>
+
+
+                    html += isGroup ? `<img src="../images/mulChat.png" width="16" height="16"/>&nbsp;&nbsp;
+
+                        <div id="One${chatId}" style="font-size:12px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;width:120px;height: 40px;margin-left: 0px;margin-top: 0px" >
+                               <div style="width: 100px; height: 20px;font-weight: bold;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">${re.name}</div>
+                               <div style="color:rgb(128,128,128);width: 110px;height: 20px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">${data}</div>
+                         </div>` :`<img src="" width="16" height="16"/>&nbsp;&nbsp;<div id="One${chatId}" style="font-size:12px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;width:120px;height: 40px;margin-left: 0px;margin-top: 0px" >
+                               <div style="width: 100px; height: 20px;font-weight: bold;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">${person.name}</div>
+                               <div style="color:rgb(128,128,128);width: 110px;height: 20px;overflow:hidden;text-overflow:ellipsis;white-space: nowrap;">${data}</div>
+                         </div>`
+                        // person.pic ? `<img src="${person.pic}"  style="width:40px;height:40px;border-radius:50px;"/>&nbsp;&nbsp;<span style="font-weight: bold;margin-top: -20px">${person.name}</span>`
+                        // : `<img src="../images/1024x1024.png"  style="width:40px;height:40px;border-radius:50px;"/>&nbsp;&nbsp;<span style="font-weight: bold;margin-top: -20px">${person.name}</span><div id="One${chatId}" style="font-size:12px;color:rgb(128,128,128);overflow:hidden;text-overflow:ellipsis;white-space: nowrap;width:120px;height: 20px;margin-left: -40px;margin-top: 20px" >${data}</div>`
                     const newMsgNum = await ChatManager.asyGetNewMsgNum(chatId)
+
                     // console.log({newMsgNum})
                     if (newMsgNum) {
                         // console.log('here')
-                        html += `<div style='color:white;font-size: 9pt;border:1px solid red;min-width:15px;height:15px;text-align: center;line-height: 15px;border-radius: 15px;background-color: red;margin-left: 5px;margin-bottom: 15px'>${newMsgNum}</div>`;
+                        html += `<div style='color:white;font-size: 9pt;border:1px solid red;min-width:15px;height:15px;text-align: center;line-height: 15px;border-radius: 15px;background-color: red;margin-left: -15px;margin-bottom: 15px'>${newMsgNum}</div>`;
                     }
                     html += `</div>`;
                 }
-
             }
 
         }
